--- a/styles/styleC1.css
+++ b/styles/styleC1.css
@@ -1,9 +1,8 @@
-* {   
-  box-sizing: border-box; 
+* {     box-sizing: border-box; 
 max-width: 100%;}
 html{
- font-size: 14px;}
-
+ font-size: 14px;
+height: 100%;}
 body { 
 margin: 0;
 background-image: url("/multimedias/Binario_c.png");
@@ -14,101 +13,87 @@ height: 100%;
 overflow-x: hidden;}
 /*------------------------------------------------*/
 .encabezado_y_pie{
-flex: 0 0 auto;
-display: block;
+display: flex;
+gap: 1.2rem;
 width: 100%;
 padding: 0%;
+height: 5%;
+
 background: linear-gradient(45deg, #32B92D 0%, #000000 100%);
-font-size: 1.125rem;
+font-size: 1rem;
 font-style: italic;
-text-align: center;
 word-spacing: 0.3rem;
 font-family: Impact, 'Haettenschweiler', 'Arial Narrow Bold', sans-serif;
-color: antiquewhite;}
-header{
-    height: 5%;}
+color: antiquewhite;
+justify-content: center;}
 footer{
     position: fixed;
-    bottom: 0;
-height: 4%;}
+    bottom: 0;}
 .encabezado_y_pie img{
     width: 1rem;
     height: 1rem;}
 /*------------------------------------------------*/
 .container *{
-    display: flex;
-    overflow: hidden;
-}
+   overflow: hidden;
+flex: none;}
 .container {
-    
-padding: 1.2rem;
-display: flex;
-flex-direction: row;
-gap: 5%;
-position: relative;
-justify-content: space-between;
-text-align: justify;
-width: 100%;
-height: 80%;
-
-margin-top: 2%;
-margin-bottom: 2%;}
+    display: flex;
+    height: 100%;
+    width: 100%;
+    margin: 2%;
+    overflow: hidden;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+   gap: 10%;}
 /*------------------------------------------------*/
-.rectangle, .sector_medio{
-  /*  flex: 0 1 auto;*/
-  position: relative;
-
-min-height: 80%;
-   top: 10%;
-   flex-direction: column; 
-   justify-content: center;
-   align-items: center;
-   text-align: center;   
-border-radius: 2rem; }
+.sector_medio, .rectangle{
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    width: 35%;
+    margin-bottom: 2%;
+    padding: 1%;
+    align-items: center;
+    border-radius: 2rem;}
 .rectangle{
-    width: 30%;
- 
+       background-color: white;}
+     .sector_medio{
+        background-color:#B3FFB3;
+     }
 
-    background-color: white;
-   
-    margin: 1rem;
-}
 .rectangle_mensaje{
     width: 100%;
     height: 45%;
     flex-direction: column;
     gap: 1rem;
     text-align: center;
-    justify-content: center;
-}
+    justify-content: center;}
 .rectangle_mensaje h6{
     justify-content: center;
     font-size: 1rem;}
+
     .rectangle_img{
 width: 100%;
 height: 50%;
-    }
-.sector_medio{
-background-color:#B3FFB3;
-width: 40%;
-left:10%;
-border-radius: 2rem;
-padding: 1rem;
-margin: 1rem;
-gap: 1rem;
-}
-
+display: block;
+align-items: center;
+justify-content: center;
+overflow: hidden;}
+.rectangle_img img{
+    object-fit: contain;}
+    /*#imagen_rect{
+        width: 25%;
+        height: 25%;}
 /*-----*/
 textarea{
 width: 90%;
-height: 30%;
+height: 40%;
 resize: none;
 border-radius: 12px;
 text-align: center;
 align-items: center;
-justify-content: center;
-}
-
+justify-content: center;}
 /*---*/
 h1{
     text-align: center;
@@ -121,27 +106,25 @@ text-decoration: none;
 font-style: normal;
 font-variant: normal;
 text-transform: uppercase;
-justify-content: baseline;
-
-}
+justify-content: baseline;}
 
 
 /*------------------------------------------------*/
 .sector_medio_button{
+    display: flex;
     width: 100%;
+    height:20%;
     min-height: 10%;
    justify-content: center;
     flex-direction:row;
-    gap: 1rem;
-
-}
+    gap: 1rem;}
 button{
-  width: 40%;
-  height: 100%;
+  width: 50%;
+  height: 60%;
     color: rgb(234, 234, 234); 
     font-size: 1rem; 
     line-height: 3rem; 
-    border-radius: 1rem; 
+    border-radius: 2rem; 
     text-align: center;
     justify-content: center;
     font-family: "Arial Black", "Gadget", sans-serif; 
@@ -159,21 +142,19 @@ background: #1a6ba1; }
     display: none;
     overflow: scroll;
 }
-.sintaxis img{
-    width: 1rem;
-    height: 1rem;}
-#recordatorio{
-    flex-direction: row;
-    gap: 0.2rem;
-   
-}
+#sintaxis{
+    font-size: 1rem;
+margin: 0;}
+
 #cuadro_de_texto{
+    width: 100%;
+    display: flex;
     flex-direction: column;
-    gap: 0.2rem;
-    width: 90%;
-    height: 50%;
-   align-items: center;
+    gap: 10%;
+   
+     align-items: center;
     justify-content: center;
+height: 80%;
 
 }
 
