--- a/styles/styleC1.css
+++ b/styles/styleC1.css
@@ -48,7 +48,7 @@ flex: none;}
    gap: 10%;}
 /*------------------------------------------------*/
 .sector_medio, .rectangle{
-    height: 100%;
+    height: 95%;
     display: flex;
     flex-direction: column;
     width: 35%;
@@ -64,20 +64,20 @@ flex: none;}
 
 .rectangle_mensaje{
     width: 100%;
-    height: 45%;
+    height: 40%;
+    display: flex;
     flex-direction: column;
-    gap: 1rem;
+   
     text-align: center;
-    justify-content: center;}
+    }
 .rectangle_mensaje h6{
     justify-content: center;
     font-size: 1rem;}
 
     .rectangle_img{
 width: 100%;
-height: 50%;
-display: block;
-align-items: center;
+height: 60%;
+display: flex;
 justify-content: center;
 overflow: hidden;}
 .rectangle_img img{
@@ -93,7 +93,8 @@ resize: none;
 border-radius: 12px;
 text-align: center;
 align-items: center;
-justify-content: center;}
+justify-content: center;
+font-size: 1rem;}
 /*---*/
 h1{
     text-align: center;
@@ -106,7 +107,8 @@ text-decoration: none;
 font-style: normal;
 font-variant: normal;
 text-transform: uppercase;
-justify-content: baseline;}
+justify-content: baseline;
+margin: 0;}
 
 
 /*------------------------------------------------*/
@@ -116,6 +118,7 @@ justify-content: baseline;}
     height:20%;
     min-height: 10%;
    justify-content: center;
+   align-items: center;
     flex-direction:row;
     gap: 1rem;}
 button{
@@ -163,9 +166,22 @@ height: 80%;
     align-items: center;
     text-align: center;
     flex-direction: column;
-    gap: 1.2rem;}
+    gap: 1.2rem;
+    width: 90%;
+    height: 100%;
+    justify-content: center;
+    align-items: center;}
+    .cifrado .sector_medio_button{
+        height: 20%;}
+        .cifrado .sector_medio_button button{
+            width: 40%;
+            height: 45%;
+        }        
 /*------------------------------------------------------------*/
 #mensaje{
+    height: 70%;
+    overflow: hidden;
+    width: 90%;
 text-align: center;
 font-family: "Edu VIC WA NT Beginner", "cursive";
  font-optical-sizing: auto;
@@ -190,20 +206,129 @@ border-radius: 1rem;
      padding: 0.8rem;
 font-size: 1,2rem;}
 
-@media (max-width: 930px) {
-    html{
-        font-size: 10px;}  }
-        @media (max-width: 670px) {
-            html{
-                font-size: 8px;}  
+@media(max-width: 1000px){
+   button{
+    width: 45%;
+    height: 55%;
+font-size: 0.8rem;}}
 
-}
-@media (max-width: 600px) {
+@media(max-width: 820px){
+.rectangle_img{
+    height: 45%;}
+    h1{
+        font-size: 1.5rem; }
+  
+    .sector_medio_button{
+        align-items:baseline;}
+    button{
+        width: 45%;
+        height: 45%;
+        font-size: 0.6rem;}
+    #cuadro_de_texto{
+        gap: 7%;}
+    .sector_medio, .rectangle{
+        height: 90%;
+    }}
+    /*-------------------------------------------*/
+
+@media (max-width: 690px) {
+    html{       font-size:10px;   }
     .container{
         flex-direction: column;
-        }
-        .rectangle, .sector_medio{
-            flex-direction: row;
-            width: 100%;
-  height: 40%;
-left: 0%;} }
+    gap: 3%; }
+    .rectangle, .sector_medio{
+            height: 40%;
+            width: 90%;
+            flex-direction: row;}
+     .rectangle_img{
+            height: 100%;
+            width: 50%;}
+     .rectangle_mensaje{
+            height: 100%;
+            width: 45%;
+        justify-content: center;}
+     #cuadro_de_texto{
+            width: 70%;
+            height: 90%;}
+    textarea{font-size: 1.3rem;}
+     .sector_medio_button{
+            display: flex;
+            flex-direction: column;
+            height: 100%;
+            width: 30%;
+            justify-content: center;
+            align-items: center; }
+    button{
+                width: 78%;
+                height: 36%;
+                font-size: 1rem;}
+    h1{font-size: 1.8rem;}
+.cifrado{
+    flex-direction: row;
+height: 100%;
+width: 100%;
+justify-content: baseline;
+align-items: baseline;}
+#mensaje{
+    height: 100%;
+    width: 60%;
+}}
+/*-------------------------------------------*/
+    @media (max-width: 500px) {
+        h1{font-size: 1.4rem;}
+            .rectangle_mensaje h6{
+                font-size: 1rem;}
+        
+        button{         width: 90%;
+                    height: 23%;
+                    font-size: 1rem;}
+                #cuadro_de_texto{
+                    gap:5%}}
+                    /*-------------------------------------------*/
+@media (max-width: 400px) {
+html{font-size: 8px;}
+.encabezado_y_pie{
+font-size: 1rem;
+padding: 1%;}
+button{width: 100;}}
+/*-------------------------------------------*/
+@media (max-width: 350px) {
+       button{font-size: 0.8rem;}}
+       /*-------------------------------------------*/
+@media (max-width: 300px) {
+    html{font-size: 7px;}
+.sector_medio{
+    display: flex;
+    flex-direction: column;
+gap: 2%;}
+#cuadro_de_texto{
+    width: 100%;
+    height: 80%;}
+.sector_medio_button{
+    height: 20%;
+    width: 100%;
+display: flex;
+flex-direction: row;
+align-items:baseline;}
+.encabezado_y_pie{
+    height: 4%;
+font-size: 1rem;
+padding: 0%;
+gap: 0.5rem;}
+.rectangle_mensaje h1{
+    font-size: 1rem;}
+    button{
+        height: 50%;
+        width: 40%;    }
+}
+/*-------------------------------------------*/
+@media(max-width:250px){
+    .rectangle_img{display: none;}
+    .rectangle_mensaje{
+        width: 100%;
+        height: 100%;
+    justify-content: center;
+align-items: center;}
+        .rectangle_mensaje h1{font-size: 1.8rem;}
+        .rectangle_mensaje h6{font-size: 1.5rem;}
+}
