--- a/styles/styleC1.css
+++ b/styles/styleC1.css
@@ -18,7 +18,7 @@ gap: 1.2rem;
 width: 100%;
 padding: 1%;
 height: 5%;
-
+overflow: hidden;
 background: linear-gradient(45deg, #32B92D 0%, #000000 100%);
 font-size: 1rem;
 font-style: italic;
@@ -195,6 +195,7 @@ background-color: rgb(255,255,179);
   display: none;
   text-align: center;
   position: absolute;
+  justify-content: center;
   transition: opacity 0.3s ease, transform 0.3s ease; 
   min-width: 16rem;
   background-color: #333;
@@ -324,12 +325,14 @@ margin: 0;}
      @media (max-width: 350px) {
                             html{font-size: 6px;}
                             .encabezado_y_pie{
-                                font-size: 1.2rem;
-                                gap: 0.5rem;
-                                padding: 1%;}
-                            .medio{font-size: 1rem;
+                                font-size: 1rem;
+                                gap: 0.1rem;
+                                padding: 1%;
+                                word-spacing: 0.1rem;}
+                            .medio{font-size: 0.7rem;
                             height: 20%;}}
                             @media(max-width:300px){
+                                .encabezado_y_pie{font-size: 0.7rem;}
                                 .container{gap: 1%;}
                                 .sector_medio, .rectangle{
                                     height: 45%; }
@@ -345,7 +348,7 @@ margin: 0;}
                                     align-self: start;}
                                         .medio{width: 40%;
                                         height: 50%;
-                                    font-size: 1rem;}
+                                    font-size: 0.7rem;}
                                         #cuadro_de_texto{width: 100%;
                                             height: 70%;
                                             margin: 0;
@@ -358,10 +361,12 @@ margin: 0;}
                                             height: 40%;
 
                                         }
+                                        #mensajeFlotante{         left: 20%;}
                                 }
                                     @media(max-width:250px){
                                         html{font-size: 4px;}
-                                    .medio{font-size: 1.2rem;}
+                                    .medio{font-size: 0.6rem;
+                                    width: 45%;}
                                 }
 
 /*-------------------------------------------
