--- a/styles/styleC.css
+++ b/styles/styleC.css
@@ -1,7 +1,7 @@
 * {     box-sizing: border-box;  }
 /*------------------------------------------------*/
 body { margin: 0;
-  background-image: url("/multimedias/Binario_c.png");
+ background-image: url("/multimedias/Binario_c.png");
  position: absolute;
 display: block;
  width: 100%;
@@ -15,15 +15,16 @@ overflow-x: hidden;}
 background: -moz-linear-gradient(45deg, #32B92D 0%, #000000 100%);
 background: -webkit-linear-gradient(45deg, #32B92D 0%, #000000 100%);
 background: linear-gradient(45deg, #32B92D 0%, #000000 100%);
-font-size: 18px;
+font-size: 1,125rem;
 font-style: italic;
-word-spacing: 5px;
+word-spacing: 0.3rem;
 font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
 color: antiquewhite;
 text-align: center;}
+
 .encabezado_y_pie img{
-    width: 16px;
-    height: 16px;}
+    width: 1rem;
+    height: 1rem;}
 /*------------------------------------------------*/
 .container {
 padding: 20px;
@@ -36,7 +37,7 @@ width: 100%;
 height: 90%;}
 /*------------------------------------------------*/
 .rectangle{
-    padding: 20px;
+    padding:  20px;
     position: relative;
    display: flex;
 
@@ -45,7 +46,8 @@ height: 90%;}
    width: 30%;
    border-radius: 32px; 
 justify-content: center;
-align-items: center;}
+align-items: center;
+text-align: center;}
 
 .sector_medio{
 display: flex;
@@ -55,7 +57,7 @@ align-items: center;
 background-color:#B3FFB3;
 width: 40%;
 margin-left: 10%;
-border-radius: 32px;
+border-radius: 2rem;
 flex-direction: column;
 gap: 20px;}
 /*-----*/
@@ -69,9 +71,8 @@ text-align: center;
 /*---*/
 h1{
     text-align: center;
-    font-size: 32px;
-    letter-spacing: 1px;
-    word-spacing: 2.8px;
+    font-size: 2rem;
+    word-spacing: 0.4rem;
 font-family: "Arial Black", Gadget, sans-serif;
 color: #1D9627;
 font-weight: normal;
@@ -80,17 +81,18 @@ font-style: normal;
 font-variant: normal;
 text-transform: uppercase;
 justify-content: baseline;
-text-align: justify;
+
 }
+
 
 /*------------------------------------------------*/
 
 button{
   
     color: rgb(234, 234, 234); 
-    font-size: 16px; 
-    line-height: 16px; 
-    padding: 16px; 
+    font-size: 1rem; 
+    line-height: 1rem; 
+    padding: 1rem; 
     border-radius: 14px; 
     font-family: "Arial Black", Gadget, sans-serif; 
     font-weight: normal; text-decoration: none; 
@@ -99,15 +101,50 @@ button{
      background-image: linear-gradient(135deg, rgb(28, 110, 164) 0%, rgb(35, 136, 203) 44%, rgb(20, 78, 117) 100%); 
      box-shadow: rgba(0, 0, 0, 0) -100px -45px 15px 5px; border: 2px solid rgb(28, 110, 164); 
      display: inline-block;}
-.button:hover {
+button:hover {
 background: #1C6EA4; }
-.button:active {
+button:active {
 background: #1a6ba1; }
 .reset{
     display: none;
     overflow: scroll;
 }
 .sintaxis img{
-    width: 16px;
-    height: 16px;
+    width: 1rem;
+    height: 1rem;
 }
+
+.cifrado{
+    display: none;
+    align-items: center;
+    text-align: center;
+    flex-direction: column;
+    gap: 20px;
+    
+}
+#mensaje{
+    text-align: center;
+    font-family: "Edu VIC WA NT Beginner", cursive;
+    font-optical-sizing: auto;
+  font-size:1rem;
+    font-style: normal;
+color:#000000;
+font-weight: normal;
+text-decoration:content;
+background-color: rgb(255,255,179);
+    padding: 20%;}
+#mensajeFlotante, #mensaje_vacio {
+    visibility: hidden;
+    min-width: 16rem;
+     background-color: #333;
+        color: #fff;
+        text-align: center;
+        border-radius: 5px;
+        padding: 10px;
+        position: fixed;
+        z-index: 1;
+        bottom: 1,8rem;
+        left: 50%;
+        transform: translateX(-50%);
+        font-size: 1,2rem;
+    }
