--- a/styles/styleC1.css
+++ b/styles/styleC1.css
@@ -5,7 +5,7 @@ html{
 height: 100%;}
 body { 
 margin: 0;
-background-image: url("/multimedias/Binario_c.png");
+background-image: url("./multimedias/Binario_c.png");
 display: flex;
 flex-direction: column;
 width: 100%;
